app/src/ui/components/MemoListFilter/MemoListFilter.css
.memo-list-filter {
    @apply tablet:pe-4 md:pe-4 overscroll-none flex flex-col;

    .search {
        @apply flex-1;
        @media (max-width: 1024px) {
            input {
                @apply py-1.5 pe-1 ps-7;
                font-size: 1rem;
            }
        }
    }

    .date-picker {
        @apply px-2 w-full relative;

        .nav {
            @apply flex items-center absolute top-0 right-0 h-12;
        }

        .nav-btn {
            @apply px-0.5 md:px-1!;
        }

        .dropdowns {
            @apply flex md:gap-2 relative h-12 items-center w-fit;
        }

        .dropdown {
            @apply flex items-center relative rounded-sm px-1 -left-1 text-sm lg:text-base;
            @apply hover:bg-surface hover:shadow-md cursor-pointer;

            .months-dropdown,
            .years-dropdown {
                @apply appearance-none border-0 absolute inset-0 opacity-0 w-full z-20 -left-1;
            }

            .caption-label {
                @apply flex items-center cursor-pointer;
            }
        }

        .month-grid {
            @apply w-full;
        }

        .weekday {
            @apply text-center p-0 font-semibold text-sm text-subtle-extra-dark;
        }

        .day {
            padding: 0;

            &.outside {
                @apply text-subtle;
            }

            &.today {
                @apply text-primary-dark dark:text-primary-light;
            }

            &.selected {
                .day-btn {
                    @apply bg-primary text-primary-contrast;
                }
            }
        }

        .day-btn {
            @apply flex items-center justify-center py-2 text-base rounded-lg;
            width: 100%;

            &:hover {
                @apply bg-subtle text-subtle-contrast;
            }

            &[disabled] {
                @apply text-subtle;
                &:hover {
                    @apply bg-transparent text-subtle;
                }
            }
        }
    }

    .short-day-picker {
        @apply w-full;

        @media (max-width: 1024px) {
            @apply pt-1;
        }

        .caption {
            display: none;
        }

        .months,
        .month {
            @apply w-full;
        }

        .month-grid {
            @apply w-full flex flex-col;
        }

        .weekday {
            @apply text-center p-0 font-semibold text-xs text-primary-dark;
        }

        .weekdays {
            @apply w-full grid grid-cols-7;
        }

        .weeks {
            @apply flex flex-row flex-nowrap justify-start items-center w-full overflow-x-auto overscroll-none;
            scroll-snap-type: x mandatory;
        }

        .week {
            @apply grid grid-cols-7;
            flex-basis: 100%;
            flex-shrink: 0;
            scroll-snap-align: center;

            &:has(.hidden):not(:has(.today)) {
                display: none;
            }
        }

        .day {
            @apply flex p-0;

            &.outside {
                @apply text-subtle;
            }

            &.today {
                @apply text-primary-dark dark:text-primary-light;
            }

            &.selected {
                @apply bg-primary-extra-light border-t border-t-primary;
                @apply items-center justify-center p-2;
                .day-btn {
                    @apply bg-primary text-primary-contrast rounded-full p-1 -mt-1 -mb-1 size-6;
                }
            }
        }

        .day-btn {
            @apply flex items-center justify-center py-2 text-sm;
            width: 100%;
        }
    }

    .collapsibile-date-picker {
        @apply flex mb-3 tablet:hidden;

        & > .btn {
            min-height: auto !important;

            &:active {
                @apply bg-transparent text-primary;
            }

            &:focus,
            &:focus-visible {
                @apply -outline-offset-1 bg-transparent text-primary;
            }

            svg {
                @apply size-5;
            }
        }

        .date-picker {
            @apply pt-2;
            display: none;

            .nav-btn {
                @apply px-2!;
            }

            .nav {
                @apply top-1;
            }
        }

        &.expanded {
            @apply flex-col;

            & > .btn {
                @apply mt-1 p-0 rounded-t-none;
            }

            .short-day-picker {
                display: none;
            }

            .date-picker {
                display: block;
            }
        }
    }

    .tag-tree {
        @apply sm:overflow-auto flex-1 py-2 overscroll-contain;
    }
}

.state-filter {
    @apply grid grid-cols-2 gap-1 items-center justify-stretch w-full bg-surface rounded-lg p-1 my-2;

    .state-filter-item {
        @apply flex gap-2 items-center justify-center p-1 text-sm rounded-sm;

        &:hover {
            @apply bg-subtle text-subtle-contrast;
        }

        &[data-pressed] {
            @apply bg-primary-light text-primary-contrast;
        }
    }
}

.filter-offcanvas-trigger {
    @apply tablet:hidden px-2.5 -ms-1;
}

.filter-offcanvas {
    & > nav {
        @apply w-full flex justify-center;
    }

    .offcanvas-title {
        @apply text-xl mb-2;
    }

    .state-filter {
        @apply bg-subtle-extra-light grid-cols-1 grid-cols-1;
    }
}

.tag-tree-item {
    .icon,
    & > span {
        @apply text-subtle-dark;
    }

    &[data-expanded] .tag-tree-item-expand-toggle-btn {
        @apply rotate-90 mt-1;
    }

    &[data-selected] .tag-tree-item-expand-toggle {
        @apply bg-primary-light! text-primary-contrast!;
        .icon,
        & > span {
            @apply text-primary-contrast;
        }
    }
}

.tag-tree-item-expand-toggle {
    @apply flex gap-1 items-center cursor-pointer rounded-sm xs:hover:bg-subtle active:bg-subtle ps-1 pe-2;
    padding-left: calc((var(--tree-item-level, 1) - 1) * var(--spacing, 0) * 8);
}

.tag-tree-item-expand-toggle-btn {
    @apply w-5;
    transition: rotate 0.25s;
}

